Adding support for Java 9+ (in addition to Java 8)